merkle getters ready tot est

--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "license": "ISC",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js",
+    "app": "node app.js",
+    "start:run": "nodemon app.js",
+    "start": "concurrently npm:start:*",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
@@ -16,6 +18,12 @@
     "express": "^4.17.2",
     "fs": "^0.0.1-security",
     "keccak": "^3.0.2",
+    "keccak256": "^1.0.6",
+    "merkletreejs": "^0.2.31",
     "sha3": "^2.1.4"
+  },
+  "devDependencies": {
+    "concurrently": "^7.0.0",
+    "nodemon": "^2.0.15"
   }
 }
