--- a/package.json
+++ b/package.json
@@ -5,14 +5,19 @@
   "license": "ISC",
   "main": "app.js",
   "scripts": {
+    "forever": "pm2 start app.js",
     "app": "node app.js",
     "start:run": "nodemon app.js",
     "start": "concurrently npm:start:*",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "view": "pm2 ls",
+    "stop": "pm2 stop app",
+    "monitor": "pm2 monitor"
   },
   "dependencies": {
     "bluebird": "^3.7.2",
     "bn.js": "^5.2.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "ethers": "^5.6.0",
     "express": "^4.17.2",
@@ -24,6 +29,7 @@
   },
   "devDependencies": {
     "concurrently": "^7.0.0",
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.15",
+    "pm2": "^5.2.0"
   }
 }
